tests/mir/valid/generics.vit
space tests/mir/valid/generics

proc identity[T](value: T) -> T {
  give value;
}

proc main() -> int {
  let first = identity(1);
  let second = identity<int>(2);
  give first + second;
}
