tests/mir/invalid/bad_generic_arity.vit
space tests/mir/invalid/bad_generic_arity

proc identity[T](value: T) -> T {
  give value;
}

proc main() -> int {
  let value = identity[int, string](1);
  give value;
}
